# sematic

./: .env  .gitignore  .lg_history  Cargo.toml  Dockerfile  README.md  build.rs  example_sentences.md  install_link_grammar.sh
link-parser-rust-bindings/: .gitignore  Cargo.toml  README.md  build.rs  link-parser-test.c  wrapper.h
link-parser-rust-bindings/examples/: hello.rs
link-parser-rust-bindings/link-grammar/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool  link-grammar.pc  link-grammar.spec
link-parser-rust-bindings/link-grammar/bindings/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/bindings/java/: Makefile  Makefile.in  build.xml
link-parser-rust-bindings/link-grammar/bindings/java-jni/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/bindings/ocaml/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/bindings/perl/: Makefile  Makefile.in  clinkgrammar.pm  lg_perl_wrap.cc
link-parser-rust-bindings/link-grammar/bindings/python/: Makefile  Makefile.in  __init__.py  _clinkgrammar.la  _clinkgrammar_la-lg_python_wrap.lo  clinkgrammar.py  lg_python_wrap.cc
link-parser-rust-bindings/link-grammar/bindings/python-examples/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/ady/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/amy/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/any/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/ar/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/de/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/demo-sql/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/en/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/fa/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/he/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/id/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/kz/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/lt/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/ru/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/th/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/tr/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/data/vn/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/link-grammar/: Makefile  Makefile.in  api.lo  connectors.lo  disjunct-utils.lo  error.lo  liblink-grammar.la  link-features.h  link-includes.h  memory-pool.lo  resources.lo  string-id.lo  string-set.lo  tracon-set.lo  utilities.lo
link-parser-rust-bindings/link-grammar/link-grammar/.deps/: api.Plo  connectors.Plo  disjunct-utils.Plo  error.Plo  memory-pool.Plo  resources.Plo  string-id.Plo  string-set.Plo  tracon-set.Plo  utilities.Plo
link-parser-rust-bindings/link-grammar/link-grammar/.libs/: liblink-grammar.5.dylib  (+2 more)
link-parser-rust-bindings/link-grammar/link-parser/: Makefile  Makefile.in  link-generator  link-parser
link-parser-rust-bindings/link-grammar/man/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/morphology/: Makefile  Makefile.in
link-parser-rust-bindings/link-grammar/tests/: Makefile  Makefile.in
link-parser-rust-bindings/src/: lib.rs  pos.rs
link-parser-rust-bindings/src/lp/: disjunct.rs  link_types.rs  mod.rs  sentence.rs  word.rs
sema-api/: Cargo.toml  README.md  rustfmt.toml
sema-api/lib/db/: Cargo.toml
sema-api/migrations/: 20220314205500_verb_frame.sql
sema-api/src/: config.rs  lib.rs  main.rs  state.rs
sema-api/src/middleware/: auth.rs
sema-api/src/nlp/: duck.rs  human_names.rs  mod.rs  nlp_rule.rs  sentence_parts.rs
sema-api/src/parse/: mod.rs  numbers.rs
sema-api/src/process_sentences/: process.rs
sema-api/src/routes/: mod.rs
sema-api/src/sema/: action.rs  agents.rs  entity.rs  event.rs  mod.rs  query.rs  relation.rs  symbol.rs  temporal.rs
sema-api/src/services/: duckling.rs  mod.rs
sema-api/src/wordnet/: mod.rs  wordnet_noun_objects.rs  wordnet_nouns.rs  wordnet_verbs.rs
sema-test/: .lg_history  Cargo.toml
sema-test/src/: main.rs
sema-test/src/tests/: temporal_tests_1.json  tests1.json  tests_1.json
src/: config.rs  (+3 more)
(+182 files in other folders)
