[package]
name = "sema-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
futures = "0.3.21"
serde = {version = "1.0.136", features = ["derive"]}
serde_derive = "1.0.136"
serde_json = "1.0.79"
link-parser-rust-bindings = { path = "../repos/TTA/link-parser-rust-bindings" }
anyhow = "1.0.56"