[package]
name = "link-parser-rust-bindings"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
thiserror = "1.0.30"
anyhow = "1.0.56"
serde = {version = "1.0.136", features = ["derive"]}
serde_derive = "1.0.136"
serde_json = "1.0.79"
regex = "1.5.6"
strum = "0.24.0"
strum_macros = "0.24"

[build-dependencies]
bindgen = "0.59.2"
