[package]
name = "sema-api"
version = "0.1.0"
edition = "2021"
default-run = "sema-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.1"
derive_more = "0.99.17"
futures = "0.3.21"
serde = {version = "1.0.136", features = ["derive"]}
serde_derive = "1.0.136"
serde_json = "1.0.79"
link-parser-rust-bindings = { path = "../link-parser-rust-bindings" }
anyhow = "1.0.56"
color-backtrace = "0.5.1"
once_cell = "1.12.0"
ron = "0.7.0"
sqlx = {version = "0.5.11", features = ["postgres", "uuid", "json", "chrono", "runtime-actix-native-tls", "offline"]}
sema-api-db = { path = "./lib/db" }
uuid = {version = "0.8.2", features = ["serde", "v4"]}
reqwest = {version = "0.11.10", features = ["json"]}
strum = "0.24.0"
strum_macros = "0.24"
nlprule = "0.6.4"
convert_case = "0.5.0"
nom = "7.1.1"
jsonwebtoken = "8.1.0"
env_logger = "0.9.0"
urlencoding = "2.1.0"

[build-dependencies]
built = {version = "0.5.1", features = ["chrono", "git2"]}
nlprule-build = "0.6.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.1.0"