[package]
name = "sema-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
link-parser-rust-bindings = { path = "../link-parser-rust-bindings" }
sema-api = { path = "../sema-api" }
console = "0.15.0"
indicatif = "0.16.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_derive = "1.0.136"
serde_json = "1.0.79"
assert-json-diff = "2.0.1"
tokio = { version = "1.19.2", features = ["full"] }