[package]
name = "sema-api-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_derive = "1.0.130"
serde_json = "1.0.67"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
sqlx = {version = "0.5.11", features = ["postgres", "uuid", "json", "chrono", "runtime-actix-native-tls", "offline"]}